--- a/src/app/components/eventoEditar/eventoEditar.component.html
+++ b/src/app/components/eventoEditar/eventoEditar.component.html
@@ -36,6 +36,10 @@
                         <h4>Enlace.</h4>
                         <p> {{evento.enlace_evento}} </p>
                     </div>
+                    <div class="container-fluid text-left">
+                      <h4>Calificacion.</h4>
+                      <p> {{evento.calificacion_evento}} </p>
+                  </div>
                 </div>
                 <div class="card-footer">
                     <p class="card-text">
@@ -61,8 +65,8 @@
                             </div>
                             <div class="col-md-6">
                                 <button class="btn btn-danger  float-right m-1" type="button" (click)="eliminarBoleto( boleto.id_boleto )" *ngIf ="boleto.estado_boleto == 1">Desactivar</button>
-                                <button class="btn btn-danger  float-right m-1" type="button" (click)="activarBoleto( boleto.id_boleto )" *ngIf ="boleto.estado_boleto == 0">Activar</button>
-                                <button class="btn btn-success float-right m-1" (click)="editarBoleto( boleto.id_boleto )">Editar</button>
+                                <button class="btn btn-success float-right m-1" type="button" (click)="activarBoleto( boleto.id_boleto )" *ngIf ="boleto.estado_boleto == 0">Activar</button>
+                                <button class="btn btn-primary float-right m-1" (click)="editarBoleto( boleto.id_boleto )">Editar</button>
                             </div>
                         </div>
                     </div>
@@ -118,7 +122,7 @@
         </div>
     </div>
 
-    <div class="card">
+    <!-- <div class="card">
         <div class="card-header">
             <h4>Estadísticas de Evento.</h4>
         </div>
@@ -234,7 +238,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="card mb-3 border-primary">
         <div class="card-header border-primary">
@@ -455,7 +459,7 @@
                                     </div>
                                 </div>
 
-                                <button class="btn btn-success btn-block mx-auto" style="width: 25%; display: block;" type="submit">Crear Boleto</button>
+                                <button class="btn btn-success btn-block mx-auto" style="width: 25%; display: block;" type="submit" [disabled]="formBoletos.invalid" >Crear Boleto</button>
                             </form>
                         </div>
                     </div>
