--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -4,7 +4,7 @@
             <button class="btn btn-outline-danger" (click)="cerrarSesion()">Cerrar Sesión</button>
         </div>
     </div>
-    <div class="row mt-3 justify-content-center align-items-center">
+    <!-- <div class="row mt-3 justify-content-center align-items-center">
         <div class="col-md-5 p-0">
             <ul class="list-group">
                 <li class="list-group-item">Nombre: {{ admin.nombre }}</li>
@@ -14,5 +14,5 @@
                 <li class="list-group-item">Fecha de nacimiento: {{ admin.fec_nac }}</li>
             </ul>
         </div>
-    </div>
+    </div> -->
 </div>
