--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -39,9 +39,11 @@
                         <td class="align-middle">{{ resultado.nombre }}</td>
                         <td class="align-middle">{{ resultado.correo }}</td>
                         <td class="align-middle" *ngIf="resultado.activo == 1"> Activo </td>
-                        <td class="align-middle" *ngIf="resultado.activo == 0"> Inactivo </td>
+                        <td class="align-middle" *ngIf="resultado.activo == 0"> Sin registro </td>
+                        <td class="align-middle" *ngIf="resultado.activo == 2"> Bloqueado </td>
                         <td class="align-middle">
-                            <button class="btn btn-danger" type="button" (click)="eliminarUsuario(resultado.id_usuario)">Eliminar</button>
+                            <button class="btn btn-danger" type="button" (click)="eliminarUsuario(resultado.id_usuario)" *ngIf="resultado.activo == 1">Eliminar</button>
+                            <button class="btn btn-success" type="button" (click)="activarUsuario(resultado.id_usuario)" *ngIf="resultado.activo == 2">Activar</button>
                             <button class="btn btn-primary" type="button">Ver Usuario</button>
                         </td>
                     </tr>
@@ -69,8 +71,10 @@
                         <td class="align-middle">{{ usuario.correo }}</td>
                         <td class="align-middle" *ngIf="usuario.activo == 1"> Activo </td>
                         <td class="align-middle" *ngIf="usuario.activo == 0"> Inactivo </td>
+                        <td class="align-middle" *ngIf="usuario.activo == 2"> Bloqueado </td>
                         <td class="align-middle">
-                            <button class="btn btn-danger" type="button" (click)="eliminarUsuario(usuario.id_usuario)">Eliminar</button>
+                            <button class="btn btn-danger" type="button" (click)="eliminarUsuario(usuario.id_usuario)" *ngIf="usuario.activo == 1">Eliminar</button>
+                            <button class="btn btn-danger" type="button" (click)="activarUsuario(usuario.id_usuario)" *ngIf="usuario.activo == 2">Activar</button>
                             <button class="btn btn-primary ml-3" type="button" (click)="verUsuario(usuario.id_usuario)">Ver Usuario</button>
                         </td>
                     </tr>
