--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -22,7 +22,13 @@
 
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                        <li class="nav-item">
+                      <li class="nav-item">
+                        <a [routerLink]="['perfil']" class="nav-link">
+                            <i class="nav-icon fas fa-calendar-alt"></i>
+                            <p>Perfil</p>
+                        </a>
+                      </li>
+                      <li class="nav-item">
                             <a [routerLink]="['eventos']" class="nav-link">
                                 <i class="nav-icon fas fa-calendar-alt"></i>
                                 <p>Eventos</p>
